apps/argocd/1_gateway.yaml
# TODO: each application has a gateway, which are merged into a single one till
# cert-manager supports http routes for automatic certificates
# https://github.com/cert-manager/cert-manager/issues/6051
# https://gateway.envoyproxy.io/docs/tasks/security/tls-cert-manager/
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    argocd.argoproj.io/sync-wave: "1"
spec:
  gatewayClassName: envoy-gateway
  addresses:
    - type: IPAddress
      value: ${EXTERNAL_IP}
  listeners:
    - name: argocd-https
      protocol: HTTPS
      port: 443
      hostname: "argocd.${BASE_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: all
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-tls-cert
            kind: Secret
    - name: argocd-grpc
      protocol: HTTPS
      port: 443
      hostname: "grpc.argocd.${BASE_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: all
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-grpc-tls-cert
            kind: Secret
---
