apps/argocd/3_http_route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "argocd.${BASE_DOMAIN}"
    argocd.argoproj.io/sync-wave: "3"
spec:
  parentRefs:
    - name: envoy
      namespace: argocd
  hostnames:
    - "argocd.${BASE_DOMAIN}"
  rules:
    - backendRefs:
      - name: argocd-server
        namespace: argocd
        kind: Service
        port: 80
---
