apps/argocd/4_grpc_route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "grpc.argocd.${BASE_DOMAIN}"
spec:
  parentRefs:
    - name: envoy
      namespace: argocd
  hostnames:
    - "grpc.argocd.${BASE_DOMAIN}"
  rules:
    - backendRefs:
      - name: argocd-server
        namespace: argocd
        kind: Service
        port: 80
---
